# cocoa

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
cocoa/: version.py
cocoa/cmd/: agent.py
cocoa/common/: config.py  service.py
tools/: coding-checks.sh  misc-sanity-checks.sh
