[metadata]
name = cocoa
summary = OpenLAN Network Solutions
description-file =
    README.md
author = Daniel Ding
author-email = danieldin186@gmail.com
python-requires = >=3.6
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: OpenLAN
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    cocoa

[entry_points]
console_scripts =
    cocoa-agent = cocoa.cmd.agent:main
